--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "hamherojs",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5"
-  }
+    "name": "hamherojs",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "node ./index.js",
+        "deploy-commands": "node ./deploy-commands.js",
+        "delete-commands": "node ./delete-commands.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "discord.js": "^14.15.3",
+        "dotenv": "^16.4.5"
+    }
 }
